hphp/test/zend/good/ext-standard-strings/bug39350.php
<?php

implode('', array(null));
implode('', array(false));
implode('', array(""));

echo "Done\n";
?>